version 0.9.3 -- unreleased
    backupninja changes
       backupninja.conf
         . added (commented out) the various default paths to
           programs such as PGSQLDUMP, so that users can figure
           out more easily they can customize them
    handler changes
        mysql:
         . fixed no user defaults file processing
	duplicity:
	 . fixed (again...) globbing in include and exclude options (Debian bug
	   #348022, follow-up to #338796)
	 . warn if vsnames or vsinclude is enabled while vservers support is
	   disabled in backupninja.conf
	 . now works when multiple vservers names are given (separated by space)
	   in vsnames config variable
    ninjahelper changes
        rdiff.helper:
         . fixed errors in create remote dir
         . code formatting cleanup (three spaces indent)
         . fixed bug which caused only first include/exclude dir to
           have "include = "
         . fixed globbing bug with exclude
        ninjahelper:
         . now reports error if the helper script has a syntax error or bombs out.
         . code formatting cleanup (three spaces indent)
    lib changes
	vserver:
	 . improved VROOTDIR detection
    known bugs:
        easydialog: 
         . formDisplay does not return exit status.

version 0.9.2 -- December 29, 2005
    backupninja changes
        fixed broken toint() which caused when "everyday" problems
        backupninja.conf.5 updated to include "when" and "vservers"
        code refactor:
            . moved to lib/ some code that has to be shared between
              backupninja and ninjahelper
    handler changes
        trac:
            . mkdir subdirectory problem fixed
        duplicity:
            . globbing support fixed in include and exclude options 
            . different signing and encrypting key support added
            . fixed erroneous comments in example.dup about the way
              GnuPG-related options are used
        mysql: