@@ -398,6 +398,7 @@ fi
 
 # include shared functions
 . $libdirectory/tools
+. $libdirectory/vserver
 
 setfile $conffile
 
@@ -422,10 +423,10 @@ getconf PGSQLDUMP /usr/bin/pg_dump
 getconf PGSQLDUMPALL /usr/bin/pg_dumpall
 getconf GZIP /bin/gzip
 getconf RSYNC /usr/bin/rsync
-getconf vservers no
-getconf VSERVERINFO /usr/sbin/vserver-info
-getconf VSERVER /usr/sbin/vserver
-getconf VROOTDIR `if [ -f "$VSERVERINFO" ]; then $VSERVERINFO info SYSINFO | grep '^ *vserver-Rootdir' | awk '{print $2}'; fi`
+
+# initialize vservers support
+# (get config variables and check real vservers availability)
+init_vservers nodialog
 
 if [ ! -d "$configdirectory" ]; then
 	echo "Configuration directory '$configdirectory' not found."
@@ -437,11 +438,6 @@ fi
 if [ "$UID" != "0" ]; then
 	echo "`basename $0` can only be run as root"
 	exit 1
-fi
-
-if [ "$vservers" == "yes" -a ! -d "$VROOTDIR" ]; then
-	echo "vservers option set in config, but $VROOTDIR is not a directory!"
-	fatal "vservers option set in config, but $VROOTDIR is not a directory!"
 fi
 
 ## Process each configuration file
